[package]
name = "rigra"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive", "std"], default-features = false }
glob = "0.3"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
toml = "0.9"
pathdiff = "0.2"
serde_yaml = "0.9"
owo-colors = "4"
rayon = "1"


[dev-dependencies]
tempfile = "3"
